Bug 801212. Fix PaintWindow signature so it actually overrides the intended function. r=enndeakin